Fixing spacing

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,7 +1,6 @@
 #intro {
   width: 100%;
   display: block;
-  margin-bottom: 2%;
 }
 
 #pronouns {
